--- a/app/src/main/res/layout/cp_pet_list.xml
+++ b/app/src/main/res/layout/cp_pet_list.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:title="@string/titleMyDogs"
         app:titleType= "add"
+        android:visibility="gone"
         />
     <include
         android:id="@+id/listView"
