--- a/app/src/main/res/layout/cp_value_box.xml
+++ b/app/src/main/res/layout/cp_value_box.xml
@@ -1,53 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.skeleton.component.view.RoundView
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/bodyLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:radius = "@dimen/radius_light"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:gravity="center"
+    android:orientation="vertical"
     >
-    <LinearLayout
-        android:id="@+id/body"
-        android:layout_width="match_parent"
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_width="@dimen/icon_regularExtra"
+        android:layout_height="@dimen/icon_regularExtra"
+        android:scaleType="fitCenter"
+        android:visibility="gone"
+        />
+    <TextView
+        android:id="@+id/textTitle"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:includeFontPadding="false"
+        android:lineSpacingExtra="0dp"
+        style="@style/fontMedium"
+        android:textSize="@dimen/font_tiny"
         android:gravity="center"
-        android:orientation="vertical"
-        >
-        <ImageView
-            android:id="@+id/icon"
-            android:layout_width="@dimen/icon_regularExtra"
-            android:layout_height="@dimen/icon_regularExtra"
-            android:scaleType="fitCenter"
-            android:visibility="gone"
-            />
-        <TextView
-            android:id="@+id/textTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:includeFontPadding="false"
-            android:lineSpacingExtra="0dp"
-            style="@style/fontMedium"
-            android:textSize="@dimen/font_tiny"
-            android:gravity="center"
-            android:textAlignment="center"
-            tools:text="title"
-            android:textColor="@color/app_grey"
-            android:layout_marginTop="@dimen/margin_thinExtra"
-            />
-        <TextView
-            android:id="@+id/textValue"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="left"
-            android:includeFontPadding="false"
-            android:lineSpacingExtra="0dp"
-            style="@style/fontBold"
-            android:textSize="@dimen/font_light"
-            tools:text="value"
-            android:textColor="@color/app_greyDeep"
-            android:layout_marginTop="@dimen/margin_thinExtra"
-            />
-    </LinearLayout>
-</com.skeleton.component.view.RoundView>
+        android:textAlignment="center"
+        tools:text="title"
+        android:textColor="@color/app_grey"
+        android:layout_marginTop="@dimen/margin_thinExtra"
+        />
+    <TextView
+        android:id="@+id/textValue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="left"
+        android:includeFontPadding="false"
+        android:lineSpacingExtra="0dp"
+        style="@style/fontBold"
+        android:textSize="@dimen/font_light"
+        tools:text="value"
+        android:textColor="@color/app_greyDeep"
+        android:layout_marginTop="@dimen/margin_thinExtra"
+        />
+</LinearLayout>
+
