--- a/app/src/main/res/layout/ui_fill_button.xml
+++ b/app/src/main/res/layout/ui_fill_button.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:paddingHorizontal="@dimen/margin_medium"
+        android:paddingHorizontal="@dimen/margin_light"
         android:gravity="center"
         android:orientation="horizontal">
         <ImageView
